"Updating Portfolio- files, links and  images of my projects "

--- a/profile-master/profile-master/index.html
+++ b/profile-master/profile-master/index.html
@@ -83,10 +83,10 @@
 							<h3><span>Web Developer / IT Support Technician </span></h3>
 							<p>
 								<ul class="fh5co-social-icons">
-									<li><a href="#"><i class="icon-twitter2"></i></a></li>
-									<li><a href="#"><i class="icon-facebook2"></i></a></li>
-									<li><a href="#"><i class="icon-linkedin2"></i></a></li>
-									<li><a href="#"><i class="icon-github2"></i></a></li>
+									<li><a href="https://twitter.com/Herimanto1995"><i class="icon-twitter2"></i></a></li>
+									<li><a href="https://www.facebook.com/LordObesus"><i class="icon-facebook2"></i></a></li>
+									<li><a href="https://www.linkedin.com/in/david-enrique-castillo-castro-18a405163/"><i class="icon-linkedin2"></i></a></li>
+									<li><a href="https://github.com/DavidC2205"><i class="icon-github2"></i></a></li>
 								</ul>
 							</p>
 						</div>
@@ -121,10 +121,10 @@
 						I am currently looking to improve my skills as a web developer, I have a lot of discipline, tenacity, ability to work in a team and proactivity.</p>
 					<p>
 						<ul class="fh5co-social-icons">
-							<li><a href="#"><i class="icon-twitter2"></i></a></li>
-							<li><a href="#"><i class="icon-facebook3"></i></a></li>
-							<li><a href="#"><i class="icon-linkedin2"></i></a></li>
-							<li><a href="#"><i class="icon-github2"></i></a></li>
+							<li><a href="https://twitter.com/Herimanto1995"><i class="icon-twitter2"></i></a></li>
+							<li><a href="https://www.facebook.com/LordObesus"><i class="icon-facebook3"></i></a></li>
+							<li><a href="https://www.linkedin.com/in/david-enrique-castillo-castro-18a405163/"><i class="icon-linkedin2"></i></a></li>
+							<li><a href="https://github.com/DavidC2205"><i class="icon-github2"></i></a></li>
 						</ul>
 					</p>
 				</div>
@@ -461,39 +461,39 @@
 			</div>
 			<div class="row">
 				<div class="col-md-3 text-center col-padding animate-box">
-					<a href="#" class="work" style="background-image: url(images/portfolio-1.jpg);">
+					<a href="https://github.com/DavidC2205/TiendaLicores.PDA2022" class="work" style="background-image: url(images/EStoreLgo.jpg);">
 						<div class="desc">
-							<h3>Project Name</h3>
-							<span>Illustration</span>
+							<h3>Estore</h3>
+							<span> dynamic e-commerce system developed in PHP.</span>
 						</div>
 					</a>
 				</div>
 				<div class="col-md-3 text-center col-padding animate-box">
-					<a href="#" class="work" style="background-image: url(images/portfolio-2.jpg);">
+					<a href="#" class="work" style="background-image: url(images/LogoRestrobar.jpg);">
 						<div class="desc">
-							<h3>Project Name</h3>
-							<span>Brading</span>
+							<h3>eRestrobar</h3>
+							<span>Php Platform to control Restaurants and Pubs </span>
 						</div>
 					</a>
 				</div>
 				<div class="col-md-3 text-center col-padding animate-box">
-					<a href="#" class="work" style="background-image: url(images/portfolio-3.jpg);">
+					<a href="#" class="work" style="background-image: url(images/MedisysLogo.jpg);">
 						<div class="desc">
-							<h3>Project Name</h3>
-							<span>Illustration</span>
+							<h3>MediSys</h3>
+							<span>system for medical patients using PHP</span>
 						</div>
 					</a>
 				</div>
 				<div class="col-md-3 text-center col-padding animate-box">
-					<a href="#" class="work" style="background-image: url(images/portfolio-4.jpg);">
+					<a href="#" class="work" style="background-image: url(images/SupportHub.jpg);">
 						<div class="desc">
-							<h3>Project Name</h3>
-							<span>Design</span>
+							<h3>Support Hub</h3>
+							<span>a helpdesk platform makeit in php </span>
 						</div>
 					</a>
 				</div>
 				<div class="col-md-3 text-center col-padding animate-box">
-					<a href="#" class="work" style="background-image: url(images/portfolio-5.jpg);">
+					<a href="#" class="work" style="background-image: url(images/blog-2.jpg);">
 						<div class="desc">
 							<h3>Project Name</h3>
 							<span>Website</span>
@@ -501,7 +501,7 @@
 					</a>
 				</div>
 				<div class="col-md-3 text-center col-padding animate-box">
-					<a href="#" class="work" style="background-image: url(images/portfolio-6.jpg);">
+					<a href="#" class="work" style="background-image: url(images/blog-2.jpg);">
 						<div class="desc">
 							<h3>Project Name</h3>
 							<span>Illustration</span>
@@ -509,7 +509,7 @@
 					</a>
 				</div>
 				<div class="col-md-3 text-center col-padding animate-box">
-					<a href="#" class="work" style="background-image: url(images/portfolio-7.jpg);">
+					<a href="#" class="work" style="background-image: url(images/blog-2.jpg);">
 						<div class="desc">
 							<h3>Project Name</h3>
 							<span>Brading</span>
@@ -517,7 +517,7 @@
 					</a>
 				</div>
 				<div class="col-md-3 text-center col-padding animate-box">
-					<a href="#" class="work" style="background-image: url(images/portfolio-8.jpg);">
+					<a href="#" class="work" style="background-image: url(images/blog-2.jpg);">
 						<div class="desc">
 							<h3>Project Name</h3>
 							<span>Illustration</span>
@@ -527,8 +527,8 @@
 			</div>
 		</div>
 	</div>
-
-	<div id="fh5co-blog">
+<!--
+//	<div id="fh5co-blog">
 		<div class="container">
 			<div class="row animate-box">
 				<div class="col-md-8 col-md-offset-2 text-center fh5co-heading">
@@ -585,15 +585,15 @@
 			</div>
 		</div>
 	</div>
-	
+-->	
 	<div id="fh5co-started" class="fh5co-bg-dark">
 		<div class="overlay"></div>
 		<div class="container">
 			<div class="row animate-box">
 				<div class="col-md-8 col-md-offset-2 text-center fh5co-heading">
 					<h2>Hire Me!</h2>
-					<p>Facilis ipsum reprehenderit nemo molestias. Aut cum mollitia reprehenderit. Eos cumque dicta adipisci architecto culpa amet.</p>
-					<p><a href="#" class="btn btn-default btn-lg">Contact Us</a></p>
+					<p>"Ready to take your projects to the next level? I'm here to help. If you're looking for a committed, creative and highly skilled web developer to join your team or work on freelance projects, look no further - contact me today to discuss how we can work together and bring your ideas to life! I'm eager to hear about your projects and contribute my experience and skills - let's create something great together!".</p>
+					<p><a href="#" class="btn btn-default btn-lg">Contact me</a></p>
 				</div>
 			</div>
 		</div>
